test/compile_errors/err_ephemeral_global_storage.w
//! expect-check-fail: ephemeral values cannot be stored in global storage

let BAD_VIEW: StrView = "hello"

fn main:
    0
